--- a/_data/locales/de-DE.yml
+++ b/_data/locales/de-DE.yml
@@ -35,11 +35,12 @@ copyright:
     link: https://creativecommons.org/licenses/by/4.0/
 
   # Displayed in the footer
-  brief: Einige Rechte vorbehalten.
+  brief: Powered by <a href="https://jekyllrb.com" target="_blank" rel="nofollow noopener">Jekyll</a> & <a href="https://github.com/cotes2020/jekyll-theme-chirpy" target="_blank" rel="nofollow noopener">Chirpy</a>
   verbose: >-
     Alle Einträge auf dieser Seite stehen, soweit nicht anders angegeben, unter der Lizenz Creative Commons Attribution 4.0 (CC BY 4.0).
 
-meta: Powered by :PLATFORM with :THEME theme
+#Powered by :PLATFORM with :THEME theme
+meta: <a href="/kontakt">Kontakt</a> &nbsp;&nbsp; <a href="/datenschutz">Datenschutz</a> &nbsp;&nbsp; <a href="/impressum">Impressum</a>
 
 not_found:
   statment: Entschuldigung, dieser Link verweist auf keine vorhandene Ressource.
@@ -76,7 +77,7 @@ df:
   post:
     strftime: "%d.%m.%Y"
     dayjs: "DD.MM.YYYY"
-    
+
 # categories page
 categories:
   category_measure:
