--- a/_data/locales/de-DE.yml
+++ b/_data/locales/de-DE.yml
@@ -35,7 +35,7 @@ copyright:
     link: https://creativecommons.org/licenses/by/4.0/
 
   # Displayed in the footer
-  brief: Powered by <a href="https://jekyllrb.com" target="_blank" rel="nofollow noopener">Jekyll</a> & <a href="https://github.com/cotes2020/jekyll-theme-chirpy" target="_blank" rel="nofollow noopener">Chirpy</a>
+  brief: Powered by <a href="https://jekyllrb.com" target="_blank" rel="nofollow noopener">Jekyll</a> & <a href="https://github.com/cchdxcom/couchidee.com/tree/master" target="_blank" rel="nofollow noopener">Chirpy</a>
   verbose: >-
     Alle Einträge auf dieser Seite stehen, soweit nicht anders angegeben, unter der Lizenz Creative Commons Attribution 4.0 (CC BY 4.0).
 
