change menu title

--- a/_data/locales/de-DE.yml
+++ b/_data/locales/de-DE.yml
@@ -14,7 +14,7 @@ tabs:
   categories: Kategorien
   tags: Tags
   archives: Archiv
-  about: Über
+  about: Über mich
 
 # the text displayed in the search bar & search results
 search:
